bynkc/tests/fixtures/negative/299_http_cache_on_non_get/src/api.bynk
context api

type View = { ok: Bool }

service api from http {
  @cache(maxAge: 5.minutes)
  on POST("/items") by Visitor (body: View) -> Effect[HttpResult[View]] {
    Ok(body)
  }
}
